# tesis

./: .env  .env.example  .gitignore  README.md  config.example.yaml  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.ps1  thesis_extracted.txt
.github/: copilot-instructions.md
outputs/: sample.json
sql/: schema.sql
src/vision_ocr_pipeline/: __init__.py  cli.py  config.py  db.py  detector.py  ocr_engine.py  pipeline.py  postprocess.py  repository.py
